[gd_scene load_steps=7 format=3 uid="uid://bbsd3tiyc4b8l"]

[ext_resource type="PackedScene" uid="uid://wuk11us62npu" path="res://Player.tscn" id="1_0llpg"]
[ext_resource type="Script" uid="uid://7f0v1ugrs4rf" path="res://main.gd" id="1_78rud"]
[ext_resource type="Texture2D" uid="uid://c75v0kesbg307" path="res://Sprites/Backgrounds/bookshelfwall.png" id="1_a1u8q"]
[ext_resource type="PackedScene" uid="uid://y2d1ut0lcmlh" path="res://pipe.tscn" id="2_ao1bj"]
[ext_resource type="PackedScene" uid="uid://dxpyoqnyajkm8" path="res://Ground.tscn" id="4_rf5wo"]
[ext_resource type="PackedScene" uid="uid://b272a063lhk5a" path="res://game_over.tscn" id="6_tm5h3"]

[node name="MAIN" type="Node"]
script = ExtResource("1_78rud")
pipe_scene = ExtResource("2_ao1bj")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(432, 468)
texture = ExtResource("1_a1u8q")

[node name="Ground" parent="." instance=ExtResource("4_rf5wo")]
z_index = 1
position = Vector2(1, 0)

[node name="player" parent="." instance=ExtResource("1_0llpg")]
position = Vector2(131, 350)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "SCORE: 0"

[node name="GameOver" parent="." instance=ExtResource("6_tm5h3")]
unique_name_in_owner = true
visible = false

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
